welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:3: error: ';' expected but '=' found.
	"m"=litMessage();
           ^