welcome.lessons.welcome.bdr.BDR.scala.code
while (estSurMessage()) {
	var m :=String= ""
	"m"=litMessage();
	if ("m"=="A") {avance();}
	else if ("m"=="R") {droite();avance();}
	else if ("m"=="L") {gauche();avance();}
	else if ("m"=="I") {gauche();gauche();avance();}
	else if ("m"=="B") {avance();avance();}
	else if ("m"=="C") {avance();avance();avance();}
	else if ("m"=="Z") {recule();}
	else if ("m"=="X") {recule();recule();recule();}
	else if ("m"=="Y") {recule();recule();}
}
